--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.115.12                    
 uvicorn[standard]
-uvicorn==0.34.3                         
-python-dotenv==1.1.0                             
+uvicorn==0.34.3         
+python-binance==1.0.29                    
+python-dotenv==1.1.0                 
+websocket-client==1.8.0               
 pandas==2.3.0                       
 sqlmodel==0.0.24                      
 motor==3.3.1                    
@@ -12,5 +14,19 @@ python-jose==3.5.0
 passlib==1.7.4
 bcrypt==4.3.0
 cryptography==45.0.4  
-python-multipart-0.0.20
-python-dotenv
+python-multipart==0.0.20
+APScheduler==3.11.0
+transformers==4.53.0
+torch==2.7.1
+redis==6.2.0
+celery[redis]>=5.2
+redis>=4.5
+httpx>=0.23.0
+pytest-asyncio>=0.21.0
+flower==2.0.1
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+asyncio==3.4.3
+mock==4.0.3
+gunicorn
